# vampire

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS  Build_LLVM_and_CLANG.txt  CMakeLists.txt  ClausifierDependencyFix.cpp  Config.hpp  ConfigureGitVersionCpp.cmake  Dockerfile  Doxyfile  FOL.dk  FOL.lp  Forwards.hpp  Giles' branches.txt  Global.cpp  HACKING.md  LICENCE  Makefile  Makefile_depend  README-CMake.md  README.md  Readme-cmake.md  THANKS  TODO  Testprob  Testprob1  Testprob2  Testprob3  Testprob4  Testprob5  Testprob6  Testprob7  Testprob8  Testprob9  Testprob_red_blue_ball  alucard.cpp  analyze  bench.py  (+61 more)
.ctags.d/: conf.ctags
Api/: FormulaBuilder.cpp  FormulaBuilder.hpp  Helper.cpp  Helper.hpp  Helper_Internal.hpp  Problem.cpp  Problem.hpp  ResourceLimits.cpp  ResourceLimits.hpp  Solver.cpp  Solver.hpp  Tracing.cpp  Tracing.hpp  explanation
Benchmarking/: BenchTOD.cpp  BenchTOD.hpp  BenchUtils.cpp  BenchUtils.hpp
BoundProp/: AssignmentSelector.cpp  AssignmentSelector.hpp  BoundPropagator.cpp  BoundPropagator.hpp  BoundsArray.cpp  BoundsArray.hpp  ConflictSelector.cpp  ConflictSelector.hpp  ConflictingVariableSelector.cpp  ConflictingVariableSelector.hpp  DecisionStack.cpp  DecisionStack.hpp  LookAheadVariableSelector.cpp  LookAheadVariableSelector.hpp  Solver.cpp  Solver.hpp  VariableSelector.cpp  VariableSelector.hpp  explanation
CASC/: CASCMode.cpp  CASCMode.hpp  CASCMultiMode.cpp  CASCMultiMode.hpp  CLTBMode.cpp  CLTBMode.hpp  CLTBModeLearning.cpp  CLTBModeLearning.hpp  CMZRMode.cpp  CMZRMode.hpp  ForkingCM.cpp  ForkingCM.hpp  MultiCM.cpp  MultiCM.hpp  PortfolioMode.cpp  PortfolioMode.hpp  ProcessScheduleExecutor.cpp  ProcessScheduleExecutor.hpp  ScheduleExecutor.cpp  ScheduleExecutor.hpp  Schedules.cpp  Schedules.hpp  SimpleLTBMode.cpp  SimpleLTBMode.hpp  SpawningCM.cpp  SpawningCM.hpp  ThreadScheduleExecutor.cpp  ThreadScheduleExecutor.hpp  explanation
DP/: DecisionProcedure.hpp  GaussElimination.cpp  GaussElimination.hpp  LinearArithmeticDP.cpp  LinearArithmeticDP.hpp  LinearArithmeticSolverDP.hpp  ShortConflictMetaDP.cpp  ShortConflictMetaDP.hpp  SimpleCongruenceClosure.cpp  SimpleCongruenceClosure.hpp  Simplex.cpp  Simplex.hpp  SimplexDP.cpp  SimplexDP.hpp  explanation
Debug/: Assertion.cpp  Assertion.hpp  Log.cpp  Log.hpp  Log_TagDecls.cpp  Log_TagDecls.hpp  Output.hpp  PrintDebug.hpp  RuntimeStatistics.cpp  RuntimeStatistics.hpp  TimeProfiling.cpp  TimeProfiling.hpp  Tracer.cpp  Tracer.hpp  explanation
ExamplesApi/: ArithmeticReasoning.cpp  CMakeLists.txt  CeilGreaterThanEqualNum.cpp  SimpleProof.cpp
FMB/: ClauseFlattening.cpp  ClauseFlattening.hpp  CliqueFinder.hpp  CombinationsIterator.hpp  DefinitionIntroduction.cpp  DefinitionIntroduction.hpp  FiniteModel.cpp  FiniteModel.hpp  FiniteModelBuilder.cpp  FiniteModelBuilder.hpp  FiniteModelBuilderIncremental.cpp  FiniteModelBuilderIncremental.hpp  FiniteModelBuilderNonIncremental.cpp  FiniteModelBuilderNonIncremental.hpp  FiniteModelMultiSorted.cpp  FiniteModelMultiSorted.hpp  FunctionRelationshipInference.cpp  FunctionRelationshipInference.hpp  ModelCheck.cpp  ModelCheck.hpp  Monotonicity.cpp  Monotonicity.hpp  SortInference.cpp  SortInference.hpp
Indexing/: AbstractingIndex.cpp  AbstractingIndex.hpp  AcyclicityIndex.cpp  AcyclicityIndex.hpp  AlascaIndex.cpp  AlascaIndex.hpp  ArithmeticIndex.cpp  ArithmeticIndex.hpp  ClauseCodeTree.cpp  ClauseCodeTree.hpp  ClauseSharing.cpp  ClauseSharing.hpp  ClauseVariantIndex.cpp  ClauseVariantIndex.hpp  CodeTree.cpp  CodeTree.hpp  CodeTreeInterfaces.cpp  CodeTreeInterfaces.hpp  CodeTree_remove.cpp  CopyPatchJit.cpp  CopyPatchJit.hpp  DelayedClauseIndex.cpp  DelayedClauseIndex.hpp  FingerprintIndex.cpp  FingerprintIndex.hpp  FormulaIndex.cpp  FormulaIndex.hpp  GroundingIndex.cpp  GroundingIndex.hpp  HOLSubstitutionTree.cpp  HOLSubstitutionTree.hpp  Index.cpp  Index.hpp  IndexManager.cpp  IndexManager.cpp.orig  IndexManager.hpp  IndexingStructure.hpp  InductionFormulaIndex.cpp  InductionFormulaIndex.hpp  InductionFormulaVariantIndex.cpp  (+60 more)
Inferences/: AnswerLiteralProcessors.cpp  AnswerLiteralProcessors.hpp  ArgCong.cpp  ArgCong.hpp  ArithmeticSubtermGeneralization.cpp  ArithmeticSubtermGeneralization.hpp  ArrayTheoryISE.cpp  ArrayTheoryISE.hpp  AtomicClauseForwardSubsumption.cpp  AtomicClauseForwardSubsumption.hpp  BDDMarkingSubsumption.cpp  BDDMarkingSubsumption.hpp  BackwardDemodulation.cpp  BackwardDemodulation.hpp  BackwardInequalityResolution.cpp  BackwardInequalityResolution.hpp  BackwardSubsumptionAndResolution.cpp  BackwardSubsumptionAndResolution.hpp  BackwardSubsumptionDemodulation.cpp  BackwardSubsumptionDemodulation.hpp  BackwardSubsumptionResolution.cpp  BackwardSubsumptionResolution.hpp  BetaEtaISE.cpp  BetaEtaISE.hpp  BetaNormaliser.cpp  BetaNormaliser.hpp  BinaryInferenceEngine.cpp  BinaryInferenceEngine.hpp  BinaryResolution.cpp  BinaryResolution.hpp  BoolEqToDiseq.cpp  BoolEqToDiseq.hpp  BoolInstantiation.cpp  BoolInstantiation.hpp  BoolSimp.cpp  BoolSimp.hpp  CCSA.cpp  CCSA.hpp  CNFOnTheFly.cpp  CNFOnTheFly.hpp  (+231 more)
InstGen/: Grounder.cpp  Grounder.hpp  IGAlgorithm.cpp  IGAlgorithm.hpp  IGAlgorithmContext.cpp  IGAlgorithmContext.hpp  IGAlgorithmContextFwd.hpp  ModelPrinter.cpp  ModelPrinter.hpp  explanation
Interactive/: Interface.cpp  Interface.hpp  Vampire.cpp  Vampire.hpp
Kernel/: ALASCA.cpp  (+242 more)
SATSubsumption/subsat/: CMakeLists.txt  SubstitutionTheory.hpp  alloc.hpp  constraint.cpp  constraint.hpp  decision_queue.hpp  default_init_allocator.hpp  log.cpp  log.hpp  subsat.cpp  subsat.hpp  subsat_config.hpp  subsat_main.cpp  types.cpp  types.hpp  variable_domain_size.hpp  vector_map.hpp
SMTSubsumption/subsat/: .gitignore  CMakeLists.txt  README.md  SubstitutionTheory.hpp  alloc.hpp  cdebug.hpp  clause.cpp  clause.hpp  decision_queue.hpp  default_init_allocator.hpp  domain_degree.hpp  ivector.hpp  log.cpp  log.hpp  subsat.cpp  subsat.hpp  subsat_config.hpp  subsat_main.cpp  types.hpp  variable_domain_size.hpp  vector_map.hpp
scripts/theory_subclause_analysis/: Cargo.toml
scripts/theory_subclause_analysis/src/: main.rs
(+1587 files in other folders)
